--- a/index.html
+++ b/index.html
@@ -8,10 +8,24 @@
     *{
         margin: 0;
         padding: 0;
+        color: #fff;
+    }
+    body{
+        background-color: #000000;
+    }
+    button{
+        color: #000;
     }
 </style>
 <body>
-
+    <div class="box">
+        <div>分数：<span class="frist-fen">0</span></div>
+        <div>生命：<span class="last-fen">10</span></div>
+        <button>开始</button>
+        <button>暂停</button>
+        <button>继续</button>
+        <button>结束</button>
+    </div>
 </body>
 </html>
 <script src="js/Code.js"></script>
